<feat> consistent design and unit test fixes
